UI - Fix main title on iphone 6/7

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ h1 {
   font-family: 'Roboto Slab', serif;
   text-align: center;
   text-transform: uppercase;
-  margin: 100px 0;
+  margin: 50px 0;
   font-size: 6rem;
 }
 
@@ -269,7 +269,7 @@ h1#title-main span {
   }
 
   #your-disposal {
-    font-size: 1.8rem;
+    font-size: 1.71rem;
     line-height: 0.4rem;
   }
 
